GeneWeb version 3.03
--------------------

* Languages
  - [23 Jan 00] Added Russian (Konstantin Abakumov).

* Setup program (gwsetup)
  - [07 Feb 00] Changed some Swedish files (Lars Gustavsson).
  - [27 Jan 00; 03 Feb 00] Added a comment in the introduction text
    telling not to delete the window! (English, French, Swedish versions)

* GeneWeb Service/CGI (gwd)
  - [11 Mar 00] The information "relationship to" is no more transformed
    into "married to" when "non-friend" browsing (it was supposed to protect
    private life, but seems to have more drawbacks than advantages).
  - [09..10 Mar 00] In update family form, added ability to specify birth
    place, death date and death place for parents and children.
  - [08 Mar 00] Added latest marriages (accessible only by "wizards" and
    "friends")
  - [08 Mar 00] Added optional displaying of images in ancestors displaying
    by tree.
  - [05 Mar 00] In birthday anniversaries for close parents (accessible
    in "cousin" page for "friends" and "wizards"), the links give now the
    relationship trees, instead of the persons.
  - [04 Mar 00] In person and family forms, added input area to specify
    a number greater than 1 of titles and children to insert.
  - [24 Feb 00] In latest births and deaths pages, display monthes.
  - [02 Feb 00] In personal pages, relations are now displayed before notes.
  - [20 Jan 00] When sorting the children, use now the baptism date
    when there is no birth date.
  - [18 Jan 00] Fixed bug: when selecting no data base, the default page
    asks for a data base name, but in CGI mode when entering a data base,
    it did not work (incorrect URL).

* Gedcom to GeneWeb (ged2gwb)
  - [19 Feb 00] Added option "-uin" (untreated in notes) asking to put
    unused Gedcom tags (of indiduals) in notes.

* Base configuration files (base.gwf)
  - [24 Feb 00] Added variable "latest_event" to give the number of latest
    events (births, deaths) displayed (default: 20).